configured webpack and deleted not needed files

--- a/src/index.html
+++ b/src/index.html
@@ -583,8 +583,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/modal.js"></script>
+    <!-- <script src="js/menu.js"></script>
+    <script src="js/modal.js"></script> -->
     <script src="js/y-map.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
