--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Дипломная работа</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
@@ -580,14 +580,12 @@
         </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/slick.min.js"></script>
-    <!-- <script src="js/menu.js"></script>
-    <script src="js/modal.js"></script> -->
-    <script src="js/y-map.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
+    <!-- <script src="js/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script> -->
+    <!-- <script src="js/y-map.js"></script> -->
+    <!-- <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/index.js"></script> -->
 </body>
 
 </html>
