--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Дипломная работа</title>
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <title>Landing Page</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
@@ -438,7 +437,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -579,13 +577,6 @@
             </form>
         </div>
     </div>
-
-    <!-- <script src="js/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script> -->
-    <!-- <script src="js/y-map.js"></script> -->
-    <!-- <script src="js/jquery.validate.min.js"></script>
-    <script src="js/jquery.maskedinput.min.js"></script>
-    <script src="js/index.js"></script> -->
 </body>
 
 </html>
