refactored HTML and JS files

--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,7 @@
                         </div>
                         <div class="hero__description">
                             Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки.Всё что
-                            Вам
-                            нужно это оставить заявку либо позвонить самому на указанный номер.Всего хорошего.
+                            Вам нужно - это оставить заявку, либо позвонить самому на указанный номер. Всего хорошего.
                         </div>
                         <button class="button hero__button">
                             подробнее
@@ -105,8 +104,8 @@
                         вызов по Москве и Московской области
                     </div>
                     <div class="hero__description">
-                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки.Всё что Вам
-                        нужно это оставить заявку либо позвонить самому на указанный номер.Всего хорошего.
+                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки. Всё что Вам
+                        нужно - это оставить заявку, либо позвонить самому на указанный номер. Всего хорошего.
                     </div>
                     <button class="button hero__button">
                         подробнее
@@ -121,8 +120,8 @@
                         вызов по Москве и Московской области
                     </div>
                     <div class="hero__description">
-                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки.Всё что Вам
-                        нужно это оставить заявку либо позвонить самому на указанный номер.Всего хорошего.
+                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки. Всё что Вам
+                        нужно - это оставить заявку, либо позвонить самому на указанный номер. Всего хорошего.
                     </div>
                     <button class="button hero__button">
                         подробнее
@@ -137,8 +136,8 @@
                         вызов по Москве и Московской области
                     </div>
                     <div class="hero__description">
-                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки.Всё что Вам
-                        нужно это оставить заявку либо позвонить самому на указанный номер.Всего хорошего.
+                        Наша бригада из 20 человек сделает всё быстро и недорого в самые кратчайшие сроки. Всё что Вам
+                        нужно - это оставить заявку, либо позвонить самому на указанный номер. Всего хорошего.
                     </div>
                     <button class="button hero__button">
                         подробнее
@@ -558,7 +557,7 @@
                         </div>
                         <div class="footer__phone">
                             <img class="footer__phone-space" src="img/phone.png" alt="телефона иконка">
-                            <a class="footer__phone-num" href="tel:+7(863)342-22-21"  >+7 (863) 342-22-21</a>
+                            <a class="footer__phone-num" href="tel:+7(863)342-22-21">+7 (863) 342-22-21</a>
                         </div>
                     </div>
                 </div>
