added modal window tests

--- a/src/index.html
+++ b/src/index.html
@@ -513,8 +513,8 @@
                         <div class="request__form" id="rf">
                             <h4 class="request__title">оставьте <span class="request__title-color"> заявку</span></h4>
                             <form class="request__fields" action="#" id="request__fields">
-                                <input class="request__input" type="text" name="user" placeholder="Введите Ваше имя">
-                                <input class="request__input mobile" type="tel" name="mobile"
+                                <input class="request__input" type="text" name="modal__user" placeholder="Введите Ваше имя">
+                                <input class="request__input mobile" type="tel" name="modal__mobile"
                                     placeholder="Введите Ваш номер телефона">
                                 <button class="button request__button">заказать &nbsp; звонок</button>
                             </form>
